RESOLVED FIXED303773
Fix linked-on-or-after check for using process assertions off the main thread
https://bugs.webkit.org/show_bug.cgi?id=303773
Summary Fix linked-on-or-after check for using process assertions off the main thread
Ben Nham
Reported 2025-12-08 13:29:33 PST
See PR
Attachments
Ben Nham
Comment 1 2025-12-08 13:29:34 PST
Ben Nham
Comment 2 2025-12-08 13:34:31 PST
EWS
Comment 3 2025-12-08 15:15:03 PST
Committed 304119@main (86a82e0343b7): <https://commits.webkit.org/304119@main> Reviewed commits have been landed. Closing PR #55056 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.