Fix linked-on-or-after check for using process assertions off the main thread https://bugs.webkit.org/show_bug.cgi?id=303773 rdar://165866989

Reviewed by Brady Eidson.

The fix in 303266@main did not work due to only early returning from the check on the first call.

* Source/WebKit/UIProcess/ProcessThrottler.cpp:
(WebKit::crashDueToApplicationCallingMainThreadOnlyWebKitAPIFromBackgroundThread):

Canonical link: https://commits.webkit.org/304119@main